# Learn_OpenGL

./: CMakeLists.txt
include/: Shader.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: Shader.cpp  glad.cpp  main.cpp
